<resources>
    <string name="app_name">BlogClient</string>
    <string name="title_activity_login">登录博客</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="topTen">头条</string>
    <string name="blog">博客</string>
    <string name="question">问答</string>
    <string name="set">设置</string>
    <string name="nightMode">夜间模式</string>
    <string name="feedBack">问题反馈</string>
    <string name="about">关于我们</string>
</resources>
