<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/topPanel"
            android:icon="@drawable/top_ten"
            android:title="@string/topTen"/>
        <item
            android:id="@+id/blogPanel"
            android:icon="@drawable/blog"
            android:title="@string/blog"/>
        <item
            android:id="@+id/questionPanel"
            android:icon="@drawable/question"
            android:title="@string/question"/>
    </group>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/set">
        <menu>
            <item
                android:id="@+id/night_theme"
                android:icon="@drawable/night"
                android:title="@string/nightMode"
                app:actionLayout="@layout/switch_layout"/>
            <item
                android:id="@+id/suggest"
                android:icon="@drawable/suggest"
                android:title="@string/feedBack"/>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>